--- a/ErabliereIU/src/app/app.component.html
+++ b/ErabliereIU/src/app/app.component.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-12">
-          <p class="text-center">© 2025 - ErabliereAPI</p>
+          <p class="text-center">© 2025 - ErabliereAPI - <a href="/termesandcondition">Termes et conditions</a></p>
         </div>
       </div>
     </div>
