--- a/ErabliereIU/src/app/client-view/you-are-not-connected/you-are-not-connected.component.html
+++ b/ErabliereIU/src/app/client-view/you-are-not-connected/you-are-not-connected.component.html
@@ -4,9 +4,9 @@
         <strong>Vous n'êtes pas connecté </strong>
         <button class="btn btn-link p-0" (click)="login()" style="vertical-align: top;">Cliquer ici pour vous connecter</button>
         @if (tenantId === 'common') {
-        <p>Connectez-vous maintenant avec votre compte Microsoft.</p>
+        <p>Connectez-vous avec votre compte Microsoft.</p>
         }
-        <p>Pour obtenir un compte, communiquer à l'administrateur. Vous trouverez les informations dans la page À propos.</p>
+        <p>Pour obtenir un compte, communiquer à l'administrateur. Vous trouverez les informations dans la page <a href="apropos">à propos</a>.</p>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 </div>
