terme et condition, étape 2

--- a/ErabliereIU/src/app/client-view/client-view.component.html
+++ b/ErabliereIU/src/app/client-view/client-view.component.html
@@ -3,6 +3,7 @@
         [idErabliereSelectionee]="idErabliereSelectionee"
         [thereIsAtLeastOneErabliere]="thereIsAtLeastOneErabliere"
     />
+    <terms-of-service-banner></terms-of-service-banner>
     <you-are-not-connected />
 </header>
 <div class="container-fluid">
