--- a/ErabliereIU/src/app/app.termes-and-conditions.component.html
+++ b/ErabliereIU/src/app/app.termes-and-conditions.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h1 class="text-center">Termes d'utilisation de ErabliereAPI</h1>
-    <h3 class="text-center">Date d'entrée en vigueur : 2025-07-23</h3>
+    <h5 class="text-center mb-5">Date d'entrée en vigueur : 2025-07-23</h5>
     <p>Bienvenue sur notre application web dédiée à l'Internet des Objets (IoT). En utilisant notre service, vous
         acceptez de respecter les termes et conditions suivants. Si vous n'acceptez pas ces termes, veuillez ne pas
         utiliser notre application.</p>
@@ -44,15 +44,21 @@
         spéciaux ou punitifs résultant de l'utilisation ou de l'incapacité à utiliser notre application.</p>
     <h2>9. Contact</h2>
     <p>Pour toute question ou préoccupation concernant ces termes d'utilisation, veuillez nous contacter à l'adresse
-        suivante : [adresse e-mail de contact].</p>
+        suivante : {{ emailContact ?? '[adresse e-mail de contact]'}}.</p>
     <p>En utilisant notre application, vous reconnaissez avoir lu et compris ces termes d'utilisation et vous vous
         engagez à les respecter.</p>
     <div class="text-center mb-3">
+        @if (!hasAcceptTerms && isLoggedIn)
+        {
         <div class="btn-group me-2">
-            <button class="btn btn-info" title="Accepter les conditions">J’accepte les conditions !</button>
+            <button class="btn btn-info" title="Accepter les conditions" (click)="acceptTerms()">J'accepte les conditions !</button>
         </div>
         <div class="btn-group">
             <a class="btn btn-info" href="/">Continuer sans accepter</a>
         </div>
+        }
+        @else if (isLoggedIn) {
+            <p>Vous avez accepter les termes en date du {{ acceptTermsDate | date: 'yyyy-MM-dd' }}.</p>
+        }
     </div>
 </div>
