--- a/ErabliereIU/src/app/admin-view/admin/admin-customers/customer-list/customer-list.component.html
+++ b/ErabliereIU/src/app/admin-view/admin/admin-customers/customer-list/customer-list.component.html
@@ -14,6 +14,7 @@
                 <th>Email</th>
                 <th>Première utilisation</th>
                 <th>Dernière utilisation</th>
+                <th>Termes et conditions d'utilisation</th>
                 <th>Nombre d'érablières</th>
                 <th class="min"></th>
             </tr>
@@ -38,6 +39,7 @@
                 <td>{{customer.email}}</td>
                 <td><span title="{{ formatMessageDate(customer.creationTime) }}">{{customer.creationTime | date: 'yyyy-MM-dd' }}</span></td>
                 <td><span title="{{ formatMessageDate(customer.lastAccessTime) }}">{{customer.lastAccessTime | date: 'yyyy-MM-dd' }}</span></td>
+                <td><span title="{{ customer.acceptTermsAt }}">{{ customer.acceptTermsAt }}</span></td>
                 <td>{{customer.customerErablieres?.length}}</td>
                 <td class="min">
                     <button
