--- a/ErabliereIU/src/app/admin-view/admin/admin-customers/modifier-customer/modifier-customer.component.html
+++ b/ErabliereIU/src/app/admin-view/admin/admin-customers/modifier-customer/modifier-customer.component.html
@@ -1,7 +1,7 @@
 <div>
-    <span class="text-danger">
-        {{generalError}}
-    </span>
+  <span class="text-danger">
+    {{generalError}}
+  </span>
   <form [formGroup]="customerForm" id="modifier-customer" (ngSubmit)="onModifier()">
     <div [class]="'form-group mb-3' + (customerForm.controls['nom'].touched ? ' was-validated' : '')">
       <label class="form-label" for="modifier-customer-nom">Nom: </label>
@@ -13,6 +13,24 @@
       <input class="form-control" type="email" formControlName="email" id="modifier-customer-email">
       <input-error [errorObj]="errorObj" [controlName]="'email'"></input-error>
     </div>
+    @if (customer == null) {
+    <span class="text-danger">Aucun client sélectionné</span>
+    }
+    @if (isUUID(customer?.uniqueName) && customer?.acceptTermsAt == null) {
+    <div class="form-group mb-3">
+      <span class="form-label">Termes et conditions d'utilisation:</span><br />
+      @if (customer?.acceptTermsAt) {
+      <span class="text-success">Accepté le {{ customer?.acceptTermsAt }}</span>
+      } @else {
+      <div class="btn-group">
+        <button type="button" class="btn btn-info" (click)="acceptTerms(customer?.uniqueName)" [title]="'Accepter les termes et conditions d\'utilisation pour ' + customer?.id" >
+          Accepter les termes et conditions d'utilisation
+        </button>
+      </div>
+      }
+
+    </div>
+    }
     <button id="modifierCustomer" class="btn btn-primary me-2" type="submit">Modifier</button>
     <button id="annulerModifierCustomer" class="btn btn-secondary" type="button" (click)="onAnnuler()">Annuler</button>
   </form>
