try fix erabliere order and get more details when error loading erabliere

--- a/ErabliereIU/src/app/client-view/erablieres-side-bar/erablieres-side-bar.component.html
+++ b/ErabliereIU/src/app/client-view/erablieres-side-bar/erablieres-side-bar.component.html
@@ -11,6 +11,9 @@
             <div class="d-flex w-100 justify-content-between">
                 <h5 class="mb-1">{{etat}}</h5>
             </div>
+            @if (errorDetails) {
+                <small class="text-danger">{{errorDetails}}</small>
+            }
         </a>
         }
         @for (erabliere of erablieres; track  erabliere.id) {
