--- a/ErabliereIU/src/app/admin-view/admin/admin-erablieres/erabliere-list/erabliere-list.component.html
+++ b/ErabliereIU/src/app/admin-view/admin/admin-erablieres/erabliere-list/erabliere-list.component.html
@@ -37,7 +37,7 @@
                     <td>&cross;</td>
                     }
                     <td>{{ erabliere.customerErablieres?.length }}</td>
-                    <td>{{ erabliere.dc }}</td>
+                    <td>{{ erabliere.dc | date: 'yyyy-MM-dd'  }}</td>
                     <td class="min">
                         <button
                             type="button"
