improving note page and a little more

--- a/ErabliereIU/src/app/client-view/rappel/rappels.component.html
+++ b/ErabliereIU/src/app/client-view/rappel/rappels.component.html
@@ -5,7 +5,7 @@
   <p>Vous devez être connecté pour voir les rappels.</p>
   }
   @else if (chargementEnCours) {
-    <div class="spinner-border" role="status">
+    <div class="spinner-border">
       <span class="visually-hidden">Chargement...</span>
     </div>
   } @else if (todayReminders.length === 0) {
@@ -13,7 +13,7 @@
   } @else {
   @for (note of todayReminders; track note;) {
   <div class="col-12 mb-2">
-    <app-rappel [note]="note" (click)="openModal(note)" style="cursor: pointer;"></app-rappel>
+    <app-rappel [note]="note" (click)="openModal(note)" (keyup)="openModalOnKeyUp($event, note)" style="cursor: pointer;"></app-rappel>
   </div>
   }
   }
