--- a/ErabliereIU/src/app/client-view/donnees/weather-forecast.component.html
+++ b/ErabliereIU/src/app/client-view/donnees/weather-forecast.component.html
@@ -2,7 +2,7 @@
     <h3 title="{{weatherData?.headline?.link}}">Prévision 5 jours</h3>
     @if (error) {
     <div class="alert alert-danger" role="alert">
-        {{ error.error }}
+        {{ error.error.errors.id ? error.error.errors.id[0] : error.message }}
     </div>
     } @else {
     <span data-bs-toggle="tooltip"
