--- a/ErabliereIU/src/app/client-view/notes/note.component.html
+++ b/ErabliereIU/src/app/client-view/notes/note.component.html
@@ -1,9 +1,8 @@
 <div id="note-{{ note.id }}" class="card mb-3">
   <h4 class="card-header">{{ note.title }}</h4>
-
   <div class="card-body">
     <div class="row">
-      <div class="col-md-10">
+      <div class="col-md-{{ note.fileExtension ? '5' : '10' }}">
         <p class="noteDescription card-text">{{ note.text }}</p>
 
         @if (note.fileExtension === 'csv') {
@@ -14,7 +13,7 @@
             }}</small></p>
 
       </div>
-      <div class="col-md-2">
+      <div class="col-md-1">
         @if (note.rappel) {
         <div class="noteReminder card bg-light p-3 mb-3 d-inline-block" style="width: max-content;">
           <h5 class="card-title">Rappel</h5>
@@ -41,15 +40,27 @@
         </div>
         }
       </div>
-    </div>
 
+      @if (note.fileExtension !== 'csv') {
+      @if (note.file !== '') {
+      <div class="col-md-6">
+        <img class="card-img-bottom img-thumbnail rounded mx-auto d-block img-thumbnail trigger-modal"
+          style="max-width: 75%;" src="data:image/png;base64,{{ note.file }}" alt="{{ note.title }}"
+          (click)="displayImageModalFunc()" (keyup)="openModalOnKeyUp($event)" />
+      </div>
+      }
+      }
+    </div>
+  </div>
+
+  <div class="card-footer">
     <div class="btn-group me-2">
       <button class="btn btn-info btn-sm" (click)="selectEditNote()">Modifier</button>
     </div>
     <div class="btn-group me-2">
       <button class="btn btn-primary btn-sm" (click)="modifierImage()">Modifier l'image</button>
     </div>
-    @if (isAIUser) 
+    @if (isAIUser)
     {
     <div class="btn-group me-2">
       <button class="btn btn-secondary btn-sm" (click)="genererUneImageParIA()">
@@ -75,15 +86,25 @@
       <span class="text-muted">{{ progressionText }}</span>
     </div>
     }
+  </div>
 
-    @if (note.fileExtension !== 'csv') {
-    <div>
-      <div class="container">
-        @if (note.file !== '') {
-        <img class="card-img-bottom img-thumbnail rounded mx-auto d-block" style="max-width: 50%;"
-          src="data:image/png;base64,{{ note.file }}" alt="{{ note.title }}" />
-        }
+  @if (displayImageModal) {
+  <div class="modal" style="display: block;">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">{{ note.title }}</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
+            (click)="displayImageModal = false">
+            <span aria-hidden="true"></span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <img [src]="'data:image/png;base64,' + note.file" class="img-fluid modal-image-content"
+            alt="{{ note.title }}">
+        </div>
       </div>
     </div>
-    }
   </div>
+  }
+</div>
