few rappel model, optimize nav bar icon for phone and dislay accuweather info logo

--- a/ErabliereIU/src/app/client-view/client-nav-bar/client-nav-bar.component.html
+++ b/ErabliereIU/src/app/client-view/client-nav-bar/client-nav-bar.component.html
@@ -61,15 +61,13 @@
             </ul>
             <div class="d-flex gap-2">
                 @if (isErabliereAIUser && useAuthentication && isLoggedIn) {
-                <button id="zone-ai-button" class="btn btn-success" routerLink="/ai"><span>🤖 </span>Erabliere
-                    AI</button>
+                <button id="zone-ai-button" class="btn btn-success" routerLink="/ai"><span>🤖 </span>AI</button>
                 }
                 @if (mapFeatureEnable) {
                 <button id="zone-carte-button" class="btn btn-primary" routerLink="/map"><span>🗺️ </span>Carte</button>
                 }
                 @if (useAuthentication && isAdminUser) {
-                <button id="zone-admin-button" class="btn btn-outline-primary" routerLink="/a"><span>⚙️ </span>Érablière
-                    Admin</button>
+                <button id="zone-admin-button" class="btn btn-outline-primary" routerLink="/a"><span>⚙️ </span>Admin</button>
                 }
                 @if (useAuthentication) {
                 <connection-button (loginChange)="onLoginChange($event)" />
