--- a/ErabliereIU/src/app/client-view/rappel/modal-rappel/modal-rappel.component.html
+++ b/ErabliereIU/src/app/client-view/rappel/modal-rappel/modal-rappel.component.html
@@ -1,6 +1,6 @@
 
-<div class="modal position-absolute d-block">
-    <div class="modal-dialog">
+<div class="modal" style="display: block;">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="modalRappelLabel">{{note.title}}</h5>
