--- a/ErabliereIU/src/app/client-view/erablieres/erabliere.component.html
+++ b/ErabliereIU/src/app/client-view/erablieres/erabliere.component.html
@@ -3,25 +3,33 @@
         @if (erabliere?.codePostal?.trim() || displayImages) {
         <div class="row border-top py-2">
             @if (erabliere?.codePostal?.trim() && erabliere?.afficherPredictionMeteoJour) {
-            <weather-forecast
-                class="col-md-6"
+            <weather-forecast 
+                class="col-md-6" 
                 [erabliere]="erabliere">
             </weather-forecast>
             }
             @if (erabliere?.codePostal?.trim() && erabliere?.afficherPredictionMeteoHeure) {
-            <hourly-weather-forecast
-                class="col-md-6"
-                style="max-height: 250px; overflow-y: auto; overflow-x: auto;">
-            </hourly-weather-forecast>
+                <hourly-weather-forecast 
+                    class="col-md-6" 
+                    style="max-height: 250px; overflow-y: auto; overflow-x: auto;"
+                    [displayAccueatherLogo]="!erabliere?.afficherPredictionMeteoJour">
+                </hourly-weather-forecast>
+            }
+            @if (erabliere?.codePostal?.trim() && erabliere?.afficherPredictionMeteoJour && erabliere?.afficherPredictionMeteoHeure) {
+            <div class="col-md-12 text-center">
+                <small class="text-muted">
+                    Prévisions météos fournies par <a href="https://www.accuweather.com" target="_blank"><img src="/assets/weathericons/accuweather/favicon.ico" alt="AccuWeather Logo" width="20" height="20"> AccuWeather</a>
+                </small>
+            </div>
             }
             @if (displayImages) {
-                <image-panel [className]="getClassPanneauImage(erabliere)" [idErabliereSelectionnee]="idErabliereSelectionee"></image-panel>
+            <image-panel [className]="getClassPanneauImage(erabliere)"
+                [idErabliereSelectionnee]="idErabliereSelectionee"></image-panel>
             }
         </div>
         }
         @if (erabliere?.afficherTrioDonnees || erabliere?.afficherSectionDompeux) {
-        <donnees-panel [initialErabliere]="erabliere"
-                    [erabliereSubject]="resetErabliere">
+        <donnees-panel [initialErabliere]="erabliere" [erabliereSubject]="resetErabliere">
         </donnees-panel>
         }
         @if (displayCapteurs) {
