fix link and display in terme of service

--- a/ErabliereIU/src/app/app.termes-and-conditions.component.html
+++ b/ErabliereIU/src/app/app.termes-and-conditions.component.html
@@ -57,7 +57,7 @@
             <a class="btn btn-info" href="/">Continuer sans accepter</a>
         </div>
         }
-        @else if (isLoggedIn) {
+        @else if (isLoggedIn && authEnable) {
             <p>Vous avez accepter les termes en date du {{ acceptTermsDate | date: 'yyyy-MM-dd' }}.</p>
         }
     </div>
