--- a/ErabliereIU/src/app/client-view/client-nav-bar/client-nav-bar.component.html
+++ b/ErabliereIU/src/app/client-view/client-nav-bar/client-nav-bar.component.html
@@ -17,14 +17,14 @@
                         Graphiques
                     </a>
                     } @else {
-                    <a class="nav-link" routerLink="e" routerLinkActive="active" ariaCurrentWhenActive="page">
+                    <a class="nav-link" routerLink="/e" routerLinkActive="active" ariaCurrentWhenActive="page">
                         Graphiques
                     </a>
                     }
                 </li>
                 @if (isLoggedIn && thereIsAtLeastOneErabliere) {
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="e/{{idErabliereSelectionee}}/capteurs" routerLinkActive="active"
+                    <a class="nav-link" routerLink="/e/{{idErabliereSelectionee}}/capteurs" routerLinkActive="active"
                         ariaCurrentWhenActive="page">
                         Capteurs</a>
                 </li>
@@ -35,19 +35,19 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a id="nav-menu-notes-button" class="nav-link" routerLink="e/{{idErabliereSelectionee}}/notes"
+                    <a id="nav-menu-notes-button" class="nav-link" routerLink="/e/{{idErabliereSelectionee}}/notes"
                         routerLinkActive="active" ariaCurrentWhenActive="page">
                         Notes
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="e/{{idErabliereSelectionee}}/documentation"
+                    <a class="nav-link" routerLink="/e/{{idErabliereSelectionee}}/documentation"
                         routerLinkActive="active" ariaCurrentWhenActive="page">
                         Documentation
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="e/{{idErabliereSelectionee}}/rapports" routerLinkActive="active"
+                    <a class="nav-link" routerLink="/e/{{idErabliereSelectionee}}/rapports" routerLinkActive="active"
                         ariaCurrentWhenActive="page">
                         Rapports
                     </a>
