--- a/ErabliereIU/src/app/client-view/erablieres/ajouter-erabliere.component.html
+++ b/ErabliereIU/src/app/client-view/erablieres/ajouter-erabliere.component.html
@@ -1,10 +1,9 @@
 <div class="modal fade" 
      id="erabliereFormModal" 
      tabindex="-1" 
-     role="dialog" 
      aria-labelledby="erabliereFormModalLabel" 
      aria-hidden="true">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="erabliereFormModalLabel">{{ modalTitle }}</h5>
