--- a/ErabliereIU/src/app/client-view/erablieres/modifier-erabliere.component.html
+++ b/ErabliereIU/src/app/client-view/erablieres/modifier-erabliere.component.html
@@ -1,10 +1,9 @@
 <div class="modal fade"
      id="modifierErabliereFormModal"
      tabindex="-1"
-     role="dialog"
      aria-labelledby="modifierErabliereFormModalLabel"
      aria-hidden="true">
-    <div class="modal-dialog modal-xl" role="document">
+    <div class="modal-dialog modal-xl">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="modifierErabliereFormModalLabel">{{ modalTitle }}</h5>
