fix horaires in ui model

--- a/ErabliereIU/src/app/client-view/erablieres/erabliere-form.component.html
+++ b/ErabliereIU/src/app/client-view/erablieres/erabliere-form.component.html
@@ -121,7 +121,7 @@
         </div>
         <hr />
         <h4>Horaire</h4>
-        <horaire [horaire]="erabliere.horaire != null && erabliere.horaire.length > 0 ? erabliere.horaire[0] : undefined"></horaire>
+        <horaire [horaire]="erabliere.horaires != null && erabliere.horaires.length > 0 ? erabliere.horaires[0] : undefined"></horaire>
     </div>
     <div class="form-group">
         <button type="button" class="btn btn-sm mt-3"
