--- a/ErabliereIU/src/app/client-view/erablieres/erabliere-form.component.html
+++ b/ErabliereIU/src/app/client-view/erablieres/erabliere-form.component.html
@@ -31,8 +31,8 @@
         </div>
         <div class="form-group">
             <label class="form-label" for="regionAdministrative">Région Administrative</label>
-            <input type="text" class="form-control" id="regionAdministrative" name="regionAdministrative" rows="3" placeholder="Région Administrative"
-                [(ngModel)]="erabliere.regionAdministrative">
+            <input type="text" class="form-control" id="regionAdministrative" name="regionAdministrative" rows="3"
+                placeholder="Région Administrative" [(ngModel)]="erabliere.regionAdministrative">
             <input-error [errorObj]="errorObj" [controlName]="'regionAdministrative'"></input-error>
         </div>
         <hr />
@@ -121,7 +121,21 @@
         </div>
         <hr />
         <h4>Horaire</h4>
-        <horaire [horaire]="erabliere.horaires != null && erabliere.horaires.length > 0 ? erabliere.horaires[0] : undefined"></horaire>
+        @if (displayHoraireForm)
+        {
+        <horaire-form
+            [horaire]="erabliere.horaires != null && erabliere.horaires.length > 0 ? erabliere.horaires[0] : undefined"></horaire-form>
+        }
+        @else
+        {
+            <div class="form-group">
+                <button type="button" class="btn btn-sm btn-secondary mt-3" (click)="displayHoraireForm = true">Modifier
+            horaire</button>
+            </div>
+        
+        }
+
+        <horaire-table [horaire]="horaire"></horaire-table>
     </div>
     <div class="form-group">
         <button type="button" class="btn btn-sm mt-3"
