--- a/ErabliereIU/src/styles.css
+++ b/ErabliereIU/src/styles.css
@@ -264,6 +264,10 @@
   cursor: pointer;
 }
 
+.form-group {
+  margin-bottom: 7px;
+}
+
 /* 100% Image Width on Smaller Screens */
 @media only screen and (max-width: 700px) {
   .modal-content {
