--- a/ErabliereIU/src/app/client-view/erablieres/modifier-erabliere.component.html
+++ b/ErabliereIU/src/app/client-view/erablieres/modifier-erabliere.component.html
@@ -67,7 +67,7 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
                     (click)="onHideModal()">Annuler</button>
-                <ebutton type="primary" [click]="modifierErabliere">Modifier</ebutton>
+                <ebutton type="primary" (clicked)="modifierErabliere()">Modifier</ebutton>
             </div>
         </div>
     </div>
