--- a/ErabliereIU/src/app/client-view/horaire/horaire-form.component.html
+++ b/ErabliereIU/src/app/client-view/horaire/horaire-form.component.html
@@ -1,4 +1,4 @@
-<form class="row">
+<div class="row">
   <div class="form-group col-md-2">
     <einput [arialabel]="'Lundi'" [placeholder]="'HH:mm-HH:mm'" [formGroup]="horaireForm" [name]="'lundi'" [pattern]="'^\\d{2}:\\d{2}-\\d{2}:\\d{2}$'" [maxlength]="12"></einput>
   </div>
@@ -21,6 +21,6 @@
     <einput [arialabel]="'Dimanche'" [placeholder]="'HH:mm-HH:mm'" [formGroup]="horaireForm" [name]="'dimanche'" [pattern]="'^\\d{2}:\\d{2}-\\d{2}:\\d{2}$'" [maxlength]="12"></einput>
   </div>
   <div class="form-group">
-    <ebutton type="primary" [click]="putHoraire">Enregistrer</ebutton>
+    <ebutton type="primary" (clicked)="putHoraire()">Enregistrer</ebutton>
   </div>
-</form>
+</div>
