--- a/ErabliereIU/src/app/client-view/erablieres/ajouter-erabliere.component.html
+++ b/ErabliereIU/src/app/client-view/erablieres/ajouter-erabliere.component.html
@@ -16,7 +16,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
-                <button type="button" class="btn btn-primary" (click)="ajouterErabliere()">Ajouter</button>
+                <ebutton type="primary" (clicked)="ajouterErabliere()">Ajouter</ebutton>
             </div>
         </div>
     </div>
